# penguin

./: .gitignore  Cargo.toml
penguin-tauri/: Cargo.toml  tauri.conf.json
penguin-tauri/src/: account.rs  friend.rs  login.rs  main.rs
ricq-client/: Cargo.toml
ricq_client/: Cargo.toml
ricq_client/src/: convert.rs  lib.rs
src/: lib.rs  message_client.rs  ricq.rs  ricq_client.rs
svelte-ui/: index.html  package-lock.json  package.json
svelte-ui/src/: App.svelte  app.css  main.js  store.js
svelte-ui/src/lib/: Main.svelte
svelte-ui/src/lib/Login/: Login.svelte  Password.svelte  Qrcode.svelte
