[package]
name = "penguin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#错误处理
thiserror = "1"
#bytes
bytes = "1"
#serde
serde = { version = "1", features = ["derive"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[workspace]
members = ["penguin-tauri", "ricq_client"]
